--- a/pillar.example
+++ b/pillar.example
@@ -1,21 +1,60 @@
 # -*- coding: utf-8 -*-
 # vim: ft=yaml
 ---
+# See the full Alloy configuration documentation at
+# https://grafana.com/docs/alloy/latest/reference/configuration/
 alloy:
-  lookup:
-    master: template-master
+  # The contents of this 'config' section are used to generate the
+  # /etc/alloy/config.alloy file.
+  config:
+    logging:
+      level: "info"
+      format: "logfmt"
 
-    # All aspects of path/file resolution are customisable using the options below.
-    # This is unnecessary in most cases; there are sensible defaults.
-    # Default path: salt://< path_prefix >/< dirs.files >/< dirs.default >
-    # I.e.: salt://alloy/files/default
-    # path_prefix: template_alt
-    # dirs:
-    #   files: files_alt
-    #   default: default_alt
-    # The entries under `source_files` are prepended to the default source files
-    # given for the state
-    source_files:
-      alloy-config-file-file-managed:
-        - 'example_alt.tmpl'
-        - 'example_alt.tmpl.jinja'
+    # Defines a prometheus.remote_write component
+    # https://grafana.com/docs/alloy/latest/reference/components/prometheus.remote_write/
+    remote_writes:
+      prom_cloud:
+        url: "https://prometheus-prod-13-prod-us-east-0.grafana.net/api/prom/push"
+        headers:
+          # Example for Grafana Cloud Prometheus.
+          # Store the key securely in pillar or a secrets backend.
+          Authorization: "Bearer YOUR_API_KEY"
+
+    # Defines prometheus.exporter.unix component
+    # https://grafana.com/docs/alloy/latest/reference/components/prometheus.exporter.unix/
+    exporters:
+      node:
+        type: "unix"
+        settings:
+          include_exporter_metrics: true
+          disable_collectors:
+            - "mdadm"
+
+    # Defines prometheus.scrape components
+    # https://grafana.com/docs/alloy/latest/reference/components/prometheus.scrape/
+    scrapes:
+      alloy_self:
+        targets:
+          - __address__: "127.0.0.1:12345"
+            job: "alloy"
+        forward_to:
+          - prometheus.remote_write.prom_cloud.receiver
+      node_exporter:
+        # This target refers to the exporter defined above
+        targets: prometheus.exporter.unix.node.targets
+        forward_to:
+          - prometheus.remote_write.prom_cloud.receiver
+
+# The settings below are not related to the Alloy configuration file,
+# but to the formula's behavior.
+
+# Example for FreeBSD binary install, if not using packages
+# dl:
+#   version_prefix: v1.0.0
+#   checksum: "sha256:..."
+
+# The 'lookup' section is for advanced formula development and can
+# generally be ignored.
+# lookup:
+#   master: template-master
