--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -67,13 +67,11 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - debian-12-master
-          - debian-11-master
-          - ubuntu-2404-master
-          - ubuntu-2204-master
-          - ubuntu-2004-master
-          - debian-12-3007-6
-          - ubuntu-2404-3007-6
+          - ubuntu-24.04
+          - ubuntu-22.04
+          - debian-12
+          - rockylinux-9
+          - opensuse-leap-15
     steps:
       - name: Debug on runner (When re-run with "Enable debug logging" checked)
         if: runner.debug
