--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -33,23 +33,25 @@ jobs:
     steps:
       - name: Harden Runner
         run: |
-          # Needed because of bug #2031 in `actions/checkout`
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - uses: actions/checkout@v5.0.0
         with:
           fetch-depth: 0
           fetch-tags: true
           filter: tree:0
-      - name: Export `CI_CACHE_ID` from container
-        run: echo "CI_CACHE_ID=$(cat /.ci_cache_id)" >> $GITHUB_ENV
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pre-commit
-          key: >-
-            ${{ env.CI_CACHE_ID }}|
-            ${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: |
-            ${{ env.CI_CACHE_ID }}|
+          key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: ${{ runner.os }}-pre-commit-
+      - name: Install pre-commit
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
       - name: Build cache
         shell: bash
         run: |
