--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -7,6 +7,12 @@ name: Commitlint
 jobs:
   lint:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
     steps:
       - uses: actions/checkout@v4
-      - uses: wagoid/commitlint-github-action@v5
+        with:
+          fetch-depth: 0
+      - uses: wagoid/commitlint-github-action@v6.2.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
