--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20.x'
       - name: Install semantic-release
         run: |
           npm install --no-audit --no-fund semantic-release@latest --no-save
