--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -1,7 +1,7 @@
 ---
 name: Test & release
 
-'on':
+"on":
   - pull_request
   - push
 
@@ -32,6 +32,8 @@ jobs:
     if: fromJSON(needs.should-run.outputs.should-run)
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    container:
+      image: node:20
     steps:
       - name: Harden Runner
         run: |
@@ -41,10 +43,13 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
           filter: tree:0
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      - name: Install Python
+        run: |
+          apt-get update && apt-get install -y python3 python3-pip
+      - name: Install pre-commit
+        run: pip3 install pre-commit --break-system-packages
+      - name: Run pre-commit
+        run: pre-commit run --all-files
 
   test:
     name: Test / Kitchen
@@ -62,7 +67,6 @@ jobs:
           - ubuntu-22.04
           - debian-12
           - rockylinux-9
-          - opensuse-leap-15
     steps:
       - name: Debug on runner (When re-run with "Enable debug logging" checked)
         if: runner.debug
@@ -73,7 +77,7 @@ jobs:
       - uses: ruby/setup-ruby@v1.267.0
         with:
           bundler-cache: true
-          ruby-version: '3.1'
+          ruby-version: "3.1"
       - run: bin/kitchen verify ${{ matrix.platform }}
 
   results:
@@ -96,10 +100,15 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "latest"
       - name: Install semantic-release
         run: |
-          npm install --no-audit --no-fund semantic-release@latest --no-save
+          npm install --no-audit --no-fund \
+            semantic-release@latest \
+            semantic-release/git \
+            semantic-release/changelog \
+            semantic-release/exec \
+            --no-save
       - name: Run `semantic-release`
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
