--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,37 +1,239 @@
 ---
+
 driver:
   name: docker
+  use_sudo: false
+  privileged: true
+  run_command: /usr/lib/systemd/systemd
 
 provisioner:
   name: salt_solo
-  salt_install: bootstrap
-  salt_bootstrap_url: https://bootstrap.saltproject.io
-  salt_version: latest
+  log_level: debug
+  salt_install: none
   require_chef: false
-  log_level: info
-  formula: alloy
+  formula: postfix
+  salt_copy_filter:
+    - .kitchen
+    - .git
+  pillars_from_directories:
+    - test/salt/pillar
+
+transport:
+  # Avoid lengthy waits when a container does not launch correctly
+  max_wait_until_ready: 60
 
 platforms:
-  - name: ubuntu-24.04
+  ## SALT `master`
+  - name: debian-12-master
     driver:
-      image: ubuntu:24.04
-      platform: ubuntu
-  - name: ubuntu-22.04
+      image: saltimages/salt-master-py3:debian-12
+      run_command: /lib/systemd/systemd
+  - name: debian-11-master
     driver:
-      image: ubuntu:22.04
-      platform: ubuntu
-  - name: debian-12
+      image: saltimages/salt-master-py3:debian-11
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2404-master
     driver:
-      image: debian:12
-      platform: debian
-  - name: rockylinux-9
+      image: saltimages/salt-master-py3:ubuntu-24.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2204-master
     driver:
-      image: rockylinux:9
-      platform: rhel
-  - name: opensuse-leap-15
+      image: saltimages/salt-master-py3:ubuntu-22.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2004-master
     driver:
-      image: opensuse/leap:15
-      platform: opensuse
+      image: saltimages/salt-master-py3:ubuntu-20.04
+      run_command: /lib/systemd/systemd
+  - name: centos-stream9-master
+    driver:
+      image: saltimages/salt-master-py3:centos-stream9
+  - name: opensuse-leap-156-master
+    driver:
+      image: saltimages/salt-master-py3:opensuse-leap-15.6
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.6`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: opensuse-tmbl-latest-master
+    driver:
+      image: saltimages/salt-master-py3:opensuse-tumbleweed-latest
+    # Workaround to avoid intermittent failures on `opensuse-tumbleweed`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: fedora-41-master
+    driver:
+      image: saltimages/salt-master-py3:fedora-41
+  - name: fedora-40-master
+    driver:
+      image: saltimages/salt-master-py3:fedora-40
+  - name: amazonlinux-2023-master
+    driver:
+      image: saltimages/salt-master-py3:amazonlinux-2023
+  - name: oraclelinux-9-master
+    driver:
+      image: saltimages/salt-master-py3:oraclelinux-9
+  - name: oraclelinux-8-master
+    driver:
+      image: saltimages/salt-master-py3:oraclelinux-8
+  - name: almalinux-9-master
+    driver:
+      image: saltimages/salt-master-py3:almalinux-9
+  - name: almalinux-8-master
+    driver:
+      image: saltimages/salt-master-py3:almalinux-8
+  - name: rockylinux-9-master
+    driver:
+      image: saltimages/salt-master-py3:rockylinux-9
+  - name: rockylinux-8-master
+    driver:
+      image: saltimages/salt-master-py3:rockylinux-8
+
+  ## SALT `3007.7`
+  - name: debian-12-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:debian-12
+      run_command: /lib/systemd/systemd
+  - name: debian-11-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:debian-11
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2404-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:ubuntu-24.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2204-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:ubuntu-22.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2004-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:ubuntu-20.04
+      run_command: /lib/systemd/systemd
+  - name: centos-stream9-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:centos-stream9
+  - name: opensuse-leap-156-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:opensuse-leap-15.6
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.6`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: opensuse-tmbl-latest-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:opensuse-tumbleweed-latest
+    # Workaround to avoid intermittent failures on `opensuse-tumbleweed`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: fedora-41-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:fedora-41
+  - name: fedora-40-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:fedora-40
+  - name: amazonlinux-2023-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:amazonlinux-2023
+  - name: amazonlinux-2-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:amazonlinux-2
+  - name: oraclelinux-9-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:oraclelinux-9
+  - name: oraclelinux-8-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:oraclelinux-8
+  - name: almalinux-9-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:almalinux-9
+  - name: almalinux-8-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:almalinux-8
+  - name: rockylinux-9-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:rockylinux-9
+  - name: rockylinux-8-3007-7
+    driver:
+      image: saltimages/salt-3007.7-py3:rockylinux-8
+
+  ## SALT `3006.15`
+  - name: debian-12-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:debian-12
+      run_command: /lib/systemd/systemd
+  - name: debian-11-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:debian-11
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2404-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:ubuntu-24.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2204-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:ubuntu-22.04
+      run_command: /lib/systemd/systemd
+  - name: ubuntu-2004-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:ubuntu-20.04
+      run_command: /lib/systemd/systemd
+  - name: centos-stream9-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:centos-stream9
+  - name: opensuse-tmbl-latest-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:opensuse-tumbleweed-latest
+    # Workaround to avoid intermittent failures on `opensuse-tumbleweed`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: opensuse-leap-156-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:opensuse-leap-15.6
+    # Workaround to avoid intermittent failures on `opensuse-leap-15.6`:
+    # => SCP did not finish successfully (255):  (Net::SCP::Error)
+    transport:
+      max_ssh_sessions: 1
+  - name: fedora-41-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:fedora-41
+  - name: fedora-40-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:fedora-40
+  - name: amazonlinux-2023-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:amazonlinux-2023
+  - name: amazonlinux-2-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:amazonlinux-2
+  - name: oraclelinux-9-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:oraclelinux-9
+  - name: oraclelinux-8-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:oraclelinux-8
+  - name: almalinux-9-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:almalinux-9
+  - name: almalinux-8-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:almalinux-8
+  - name: rockylinux-9-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:rockylinux-9
+  - name: rockylinux-8-3006-15
+    driver:
+      image: saltimages/salt-3006.15-py3:rockylinux-8
+
+verifier:
+  # https://www.inspec.io/
+  name: inspec
+  sudo: true
+  reporter:
+    # cli, documentation, html, progress, json, json-min, json-rspec, junit
+    - cli
 
 suites:
   - name: default
